[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/Menu_Control.gd" type="Script" id=1]
[ext_resource path="res://UI/Theme.tres" type="Theme" id=2]
[ext_resource path="res://fonts/TitleFont.tres" type="DynamicFont" id=3]

[node name="root" type="Node"]

[node name="Menu_Controller" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_Start" type="Button" parent="Menu_Controller"]
margin_left = 309.107
margin_top = 162.361
margin_right = 489.107
margin_bottom = 232.361
theme = ExtResource( 2 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_Settings" type="Button" parent="Menu_Controller"]
margin_left = 309.107
margin_top = 282.361
margin_right = 489.107
margin_bottom = 352.361
rect_pivot_offset = Vector2( 102.633, 49.9475 )
theme = ExtResource( 2 )
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_Exit" type="Button" parent="Menu_Controller"]
margin_left = 309.107
margin_top = 402.361
margin_right = 489.107
margin_bottom = 472.361
theme = ExtResource( 2 )
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_Create_Party" type="Button" parent="Menu_Controller"]
margin_left = 518.411
margin_top = 163.359
margin_right = 698.411
margin_bottom = 233.359
theme = ExtResource( 2 )
text = "Create a Party"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_Join_Party" type="Button" parent="Menu_Controller"]
margin_left = 517.872
margin_top = 280.227
margin_right = 697.872
margin_bottom = 350.227
theme = ExtResource( 2 )
text = "Join a Party"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PartyCodeTextEdit" type="TextEdit" parent="Menu_Controller"]
margin_left = 522.485
margin_top = 362.983
margin_right = 694.485
margin_bottom = 402.983
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleText" type="RichTextLabel" parent="Menu_Controller"]
margin_left = 316.357
margin_top = 45.4757
margin_right = 709.357
margin_bottom = 132.476
custom_fonts/normal_font = ExtResource( 3 )
bbcode_enabled = true
bbcode_text = "[wave amp=150 freq=4][rainbow freq=0.4 sat=1.3 val=1]Late to the Stage[/rainbow][/wave]"
text = "Late to the Stage"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Menu_Controller/Button_Start" to="Menu_Controller" method="_on_Button_Start_pressed"]
[connection signal="pressed" from="Menu_Controller/Button_Settings" to="Menu_Controller" method="_on_Button_Settings_pressed"]
[connection signal="pressed" from="Menu_Controller/Button_Exit" to="Menu_Controller" method="_on_Button_Exit_pressed"]
[connection signal="pressed" from="Menu_Controller/Button_Create_Party" to="Menu_Controller" method="_on_Button_Create_Party_pressed"]
[connection signal="pressed" from="Menu_Controller/Button_Join_Party" to="Menu_Controller" method="_on_Button_Join_Party_pressed"]
